test/errors/functions/null_default_incompatible_error.hy
// EXPECT_OUTPUT: Null default value is only allowed for reference or nullable parameter 'value'
int bad(int value = null)
{
    return value
}

